Removing JSPwiki from build.xml, removing old forrest stuff, adding property to communicate with the documentation project